# Data_structures_and_programming_2023-2024

./: .gitignore
BST/: bst.cpp
Bonus_1/: CMakeLists.txt
Bonus_1/src/: CMakeLists.txt
Bonus_1/src/data_structures/: CMakeLists.txt
Bonus_1/src/myapp/: CMakeLists.txt  main.cpp
Bonus_1/test/: CMakeLists.txt
Bonus_1/test/data_structures/: dynamic_array_test.cpp
Graphs/: graphs.cpp  representations.cpp
Seminar_3_Stack/: firstLargerThanToTheRight.cpp
Seminar_4/: leetcode150.cpp  leetcode224.cpp  leetcode227.cpp
Seminar_6/: README.md  solution.cpp
Trees/src/: BinaryNode.h  BinaryTree.cpp  BinaryTree.h  BinaryTreeSolution.cpp  CMakeLists.txt
Trees/test/: BinaryNode_test.cpp  CMakeLists.txt
cmake_example/: CMakeLists.txt
cmake_example/src/: CMakeLists.txt  main.cpp
cmake_example/src/math/: CMakeLists.txt  fact.cpp
cmake_example/src/math/include/: fact.h
cmake_example/tests/: CMakeLists.txt  fmath_test.cpp
